sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__x_cycles__tests__snapshots__base_3_sample_2_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/x_cycles.rs
description: Strategy XCycles executed on grid base_3_sample_2_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │     │     ║ 1   │     │     ║
    - ║  2  │  5  │  6  ║     │  3  │ 4   ║     │ 4   │ 4   ║
    - ║     │  89 │     ║ 7 9 │     │ 7   ║   9 │  89 │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │     ║  2  │     │     ║  23 │     │  2  ║
    - ║     │     │  1  ║     │  6  │  5  ║     │  7  │ 4   ║
    - ║  89 │  89 │     ║   9 │     │     ║   9 │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║     │     │     ║  23 │     │  2  ║
    - ║     │  4  │  7  ║  1  │     │  8  ║   6 │  5  │     ║
    - ║   9 │     │     ║     │   9 │     ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1 3 │   3 ║     │     │   3 ║   3 │     │     ║
    - ║  5  │   6 │ 4   ║   6 │     │   6 ║     │  2  │  9  ║
    - ║     │     │     ║ 78  │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │  23 │     ║     │     │     ║     │   3 │     ║
    - ║     │     │  8  ║  5  │  1  │  9  ║  4  │     │  6  ║
    - ║ 7   │     │     ║ 7   │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │   3 ║     │     │   3 ║   3 │   3 │     ║
    - ║     │   6 │     ║  4  │  2  │   6 ║  5  │     │  1  ║
    - ║ 7 9 │   9 │     ║     │     │ 7   ║ 7   │  8  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║ 1 3 │ 1 3 │   3 ║     │     │     ║     │     │     ║
    - ║     │  5  │  5  ║  56 │  4  │  2  ║  8  │   6 │     ║
    - ║     │     │     ║ 7 9 │     │     ║     │   9 │ 7   ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │ 1   ║  2  │     │     ║
    - ║  6  │     │  9  ║  3  │     │     ║     │ 4   │  5  ║
    - ║     │  8  │     ║     │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║     │     │     ║  2  │     │     ║
    - ║ 4   │  7  │ 45  ║  56 │  5  │   6 ║   6 │  1  │  3  ║
    - ║  8  │     │     ║  89 │  89 │     ║   9 │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r1c6: delete candidate 2, because of: r1c6: candidate 2, r2c6: candidate 2, r2c8: candidate 2, r7c6: candidate 2, r8c6: candidate 2"
    - "r3c6: delete candidate 3, because of: r3c5: candidate 3, r3c6: candidate 3, r4c7: candidate 3, r5c5: candidate 3, r5c7: candidate 3"
    - "r6c8: set value 7, because of: r3c4: candidate 7, r3c6: candidate 7, r5c6: candidate 7, r6c3: candidate 7, r7c4: candidate 7, r7c6: candidate 7"
    - "r7c6: delete candidate 7, because of: r3c4: candidate 7, r3c6: candidate 7, r5c6: candidate 7, r7c4: candidate 7, r7c6: candidate 7"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │     │     ║ 1   │     │     ║
    - ║  2  │  5  │  6  ║     │  3  │ 4   ║     │ 4   │ 4   ║
    - ║     │  89 │     ║ 7 9 │     │ 7   ║   9 │  89 │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │     ║  2  │     │     ║   3 │     │  2  ║
    - ║     │     │  1  ║     │  6  │  5  ║     │  7  │ 4   ║
    - ║  89 │  89 │     ║   9 │     │     ║   9 │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║     │     │     ║  23 │     │  2  ║
    - ║     │  4  │  7  ║  1  │     │  8  ║   6 │  5  │     ║
    - ║   9 │     │     ║     │   9 │     ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1 3 │   3 ║     │     │   3 ║     │     │     ║
    - ║  5  │   6 │ 4   ║   6 │     │   6 ║     │  2  │  9  ║
    - ║     │     │     ║ 78  │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │  23 │     ║     │     │     ║     │   3 │     ║
    - ║     │     │  8  ║  5  │  1  │  9  ║  4  │     │  6  ║
    - ║ 7   │     │     ║ 7   │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │   3 ║     │     │   3 ║   3 │   3 │     ║
    - ║     │   6 │     ║  4  │  2  │   6 ║  5  │     │  1  ║
    - ║ 7 9 │   9 │     ║     │     │ 7   ║ 7   │  8  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║ 1 3 │ 1 3 │   3 ║     │     │     ║     │     │     ║
    - ║     │  5  │  5  ║  56 │  4  │  2  ║  8  │   6 │  7  ║
    - ║     │     │     ║   9 │     │     ║     │   9 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │ 1   ║  2  │     │     ║
    - ║  6  │     │  9  ║  3  │     │     ║     │ 4   │  5  ║
    - ║     │  8  │     ║     │ 78  │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║     │     │     ║  2  │     │     ║
    - ║ 4   │  7  │ 45  ║  56 │  5  │   6 ║   6 │  1  │  3  ║
    - ║  8  │     │     ║  89 │  89 │     ║   9 │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 1
          column: 6
        candidates:
          - 2
      - position:
          row: 2
          column: 6
        candidates:
          - 2
      - position:
          row: 2
          column: 8
        candidates:
          - 2
      - position:
          row: 7
          column: 6
        candidates:
          - 2
      - position:
          row: 8
          column: 6
        candidates:
          - 2
    actions:
      - position:
          row: 1
          column: 6
        deleteCandidates:
          - 2
  - reasons:
      - position:
          row: 3
          column: 5
        candidates:
          - 3
      - position:
          row: 3
          column: 6
        candidates:
          - 3
      - position:
          row: 4
          column: 7
        candidates:
          - 3
      - position:
          row: 5
          column: 5
        candidates:
          - 3
      - position:
          row: 5
          column: 7
        candidates:
          - 3
    actions:
      - position:
          row: 3
          column: 6
        deleteCandidates:
          - 3
  - reasons:
      - position:
          row: 3
          column: 4
        candidates:
          - 7
      - position:
          row: 3
          column: 6
        candidates:
          - 7
      - position:
          row: 5
          column: 6
        candidates:
          - 7
      - position:
          row: 6
          column: 3
        candidates:
          - 7
      - position:
          row: 7
          column: 4
        candidates:
          - 7
      - position:
          row: 7
          column: 6
        candidates:
          - 7
    actions:
      - position:
          row: 6
          column: 8
        setValue: 7
  - reasons:
      - position:
          row: 3
          column: 4
        candidates:
          - 7
      - position:
          row: 3
          column: 6
        candidates:
          - 7
      - position:
          row: 5
          column: 6
        candidates:
          - 7
      - position:
          row: 7
          column: 4
        candidates:
          - 7
      - position:
          row: 7
          column: 6
        candidates:
          - 7
    actions:
      - position:
          row: 7
          column: 6
        deleteCandidates:
          - 7
